--- a/HTML/home.html
+++ b/HTML/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Coffree</title>
-    <link rel="stylesteet" href="../CSS/home.css">
+    <link rel="stylesheet" href="../CSS/home.css">
 </head>
 <body>
     <div class="container">
