--- a/HTML/location.html
+++ b/HTML/location.html
@@ -19,19 +19,26 @@
             <div class="head-left">
                 <a href="./cart.html"><img class="logo" src="../IMAGE/logo/Shopping-cart.png"></a>
                 <a href="./profile.html"><img class="logo" src="../IMAGE/logo/User-Profile.png"></a>
-                <button class="sign-in">Sign in</button>
+                <button class="sign-in"><a class="button-link" href="./profile.html">Sign In</a></button>
             </div>
         </div>
         <div class="main">
-            <h1>Start your day with<br>The Coffree</h1>
-            <p>We use coffee beans from South America</p>
-            <P>Roasted with love</P>
-            <P>Welcome to our coffee shop website, we sells many various types of coffee and tea,
-                <br>and our brand name of the shop is. We are passionate about coffee and the art
-                <br> of perfect brewing. So, we make sure that our customers get to taste the best
-                <br> handpicked coffee beans from South America make it into unique coffee drinks.
-            </P>
-            <button>Try Out</button>
+            <div class="locations">
+                <div class="location">
+                    <div class="where">
+                        <p>The Coffree</p>
+                        <br>
+                        <p>OCIC, Phom Penh
+                            <br>6 km away
+                        </p>
+                        <p class="open">Open</p>
+                    </div>
+                    <button class="order"><a class="button-link" href="./menu.html">Order Now</a></button>
+                </div>
+            </div>
+            <div class="maps">
+                <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3907.5825745416473!2d104.90911947452811!3d11.653065142413745!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3109516bdea989b3%3A0x372d2c5e0e14b706!2z4Z6U4Z6O4Z-S4Z6M4Z634Z6P4Z-S4Z6Z4Z6f4Z6X4Z624Z6U4Z6F4Z-S4Z6F4Z-B4Z6A4Z6c4Z634Z6R4Z-S4Z6Z4Z624Z6M4Z644Z6H4Z644Z6Q4Z6b4Z6A4Z6Y4Z-S4Z6W4Z674Z6H4Z62!5e0!3m2!1skm!2skh!4v1733238379202!5m2!1skm!2skh" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
         </div>
         <div class="bottom">
             <div class="follow">Follow
