--- a/HTML/menu.html
+++ b/HTML/menu.html
@@ -17,9 +17,9 @@
                 <a href="./about.html">About</a>
             </div>
             <div class="head-left">
-                <div><img class="logo" src="../IMAGE/logo/Shopping-cart.png"></div>
-                <div><img class="logo" src="../IMAGE/logo/User-Profile.png"></div>
-                <button class="sign-in">Sign in</button>
+                <a href="./cart.html"><img class="logo" src="../IMAGE/logo/Shopping-cart.png"></a>
+                <a href="./profile.html"><img class="logo" src="../IMAGE/logo/User-Profile.png"></a>
+                <button class="sign-in"><a class="button-link" href="./profile.html">Sign In</a></button>
             </div>
         </div>
         <div class="head">
