--- a/HTML/blog.html
+++ b/HTML/blog.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Coffree</title>
-    <link rel="stylesheet" href="../CSS/cart.css">
+    <link rel="stylesheet" href="../CSS/home.css">
 </head>
 <body>
     <div class="container">
@@ -14,7 +14,14 @@
                 <a href="./home.html">Home</a>
                 <a href="./menu.html">Menu</a>
                 <a href="./location.html">Location</a>
-                <a href="./about.html">About</a>
+                <section name="About">
+                    <select id="page-select" onchange="navigateToPage()">
+                        <option value="">About</option>
+                        <option value="./our-story.html">Our Story</option>
+                        <option value="./mobile-app.html">Mobile App</option>
+                        <option value="./blog.html">Blog</option>
+                    </select>
+                </section>
             </div>
             <div class="head-left">
                 <a href="./cart.html"><img class="logo" src="../IMAGE/logo/Shopping-cart.png"></a>
@@ -43,8 +50,6 @@
                     <svg class="logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M10.4883 14.651L15.25 21H22.25L14.3917 10.5223L20.9308 3H18.2808L13.1643 8.88578L8.75 3H1.75L9.26086 13.0145L2.31915 21H4.96917L10.4883 14.651ZM16.25 19L5.75 5H7.75L18.25 19H16.25Z"></path></svg>
                     <div>X</div>
                 </div>
-                
-                
             </div>
             <div class="contact">Contact Us
                 <p>(+855) 12 222222</p>
@@ -52,5 +57,14 @@
             </div>
         </div> 
     </div>
+    <script>
+        function navigateToPage() {
+            var selectElement = document.getElementById('page-select');
+            var selectedValue = selectElement.value;
+            if (selectedValue) {
+                window.location.href = selectedValue;  // Redirect to the selected page
+            }
+        }
+    </script>
 </body>
 </html>
