--- a/HTML/home.html
+++ b/HTML/home.html
@@ -11,15 +11,22 @@
         <div class="header">
             <h1 class="brand">The Coffree</h1>
             <div class="menu">
-                <a href="./home.html">Home</a>
+                <a class="chose" href="./home.html">Home</a>
                 <a href="./menu.html">Menu</a>
                 <a href="./location.html">Location</a>
-                <a href="./about.html">About</a>
+                <div class="about">
+                    <p class="about-chose">About</p>
+                    <div class="about-content">
+                        <a href="./our-story.html">Our Story</a>
+                        <a href="./mobile-app.html">Mobile App</a>
+                        <a href="./blog.html">Blog</a>
+                    </div>
+                </div>
             </div>
             <div class="head-left">
                 <a href="./cart.html"><img class="logo" src="../IMAGE/logo/Shopping-cart.png"></a>
                 <a href="./profile.html"><img class="logo" src="../IMAGE/logo/User-Profile.png"></a>
-                <button class="sign-in">Sign in</button>
+                <button class="sign-in"><a class="button-link" href="./profile.html">Sign In</a></button>
             </div>
         </div>
         <div class="main">
@@ -43,8 +50,6 @@
                     <svg class="logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M10.4883 14.651L15.25 21H22.25L14.3917 10.5223L20.9308 3H18.2808L13.1643 8.88578L8.75 3H1.75L9.26086 13.0145L2.31915 21H4.96917L10.4883 14.651ZM16.25 19L5.75 5H7.75L18.25 19H16.25Z"></path></svg>
                     <div>X</div>
                 </div>
-                
-                
             </div>
             <div class="contact">Contact Us
                 <p>(+855) 12 222222</p>
@@ -52,5 +57,14 @@
             </div>
         </div> 
     </div>
+    <script>
+        function navigateToPage() {
+            var selectElement = document.getElementById('page-select');
+            var selectedValue = selectElement.value;
+            if (selectedValue) {
+                window.location.href = selectedValue;  // Redirect to the selected page
+            }
+        }
+    </script>
 </body>
 </html>
