--- a/HTML/profile.html
+++ b/HTML/profile.html
@@ -19,7 +19,7 @@
             <div class="head-left">
                 <a href="./cart.html"><img class="logo" src="../IMAGE/logo/Shopping-cart.png"></a>
                 <a href="./profile.html"><img class="logo" src="../IMAGE/logo/User-Profile.png"></a>
-                <button class="sign-in">Sign in</button>
+                <button class="sign-in"><a class="button-link" href="./profile.html">Sign In</a></button>
             </div>
         </div>
         <div class="main">
