--- a/HTML/menu.html
+++ b/HTML/menu.html
@@ -12,9 +12,16 @@
             <h1 class="brand">The Coffree</h1>
             <div class="menu">
                 <a href="./home.html">Home</a>
-                <a href="./menu.html">Menu</a>
+                <a class="chose" href="./menu.html">Menu</a>
                 <a href="./location.html">Location</a>
-                <a href="./about.html">About</a>
+                <div class="about">
+                    <p class="about-chose">About</p>
+                    <div class="about-content">
+                        <a href="./our-story.html">Our Story</a>
+                        <a href="./mobile-app.html">Mobile App</a>
+                        <a href="./blog.html">Blog</a>
+                    </div>
+                </div>
             </div>
             <div class="head-left">
                 <a href="./cart.html"><img class="logo" src="../IMAGE/logo/Shopping-cart.png"></a>
