--- a/HTML/mobile-app.html
+++ b/HTML/mobile-app.html
@@ -14,14 +14,14 @@
                 <a href="./home.html">Home</a>
                 <a href="./menu.html">Menu</a>
                 <a href="./location.html">Location</a>
-                <section name="About">
-                    <select id="page-select" onchange="navigateToPage()">
-                        <option value="">About</option>
-                        <option value="./our-story.html">Our Story</option>
-                        <option value="./mobile-app.html">Mobile App</option>
-                        <option value="./blog.html">Blog</option>
-                    </select>
-                </section>
+                <div class="about">
+                    <p class="chose" class="about-chose">Mobile App</p>
+                    <div class="about-content">
+                        <a href="./our-story.html">Our Story</a>
+                        <a href="./mobile-app.html">Mobile App</a>
+                        <a href="./blog.html">Blog</a>
+                    </div>
+                </div>
             </div>
             <div class="head-left">
                 <a href="./cart.html"><img class="logo" src="../IMAGE/logo/Shopping-cart.png"></a>
