--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@ body {
     background: none;
     margin: auto;
     font-weight: bold;
+    color: #fff;
 }
 
 .about-content {
@@ -135,55 +136,7 @@ body {
     text-decoration: none;
 }
 
-/* Media Queries for Responsiveness */
-@media (max-width: 768px) {
-    .header {
-        grid-template-columns: 1fr 2fr 1fr;
-        padding: 10px;
-    }
 
-    .menu {
-        grid-template-columns: repeat(2, auto);
-        gap: 15px;
-    }
-
-    .brand {
-        font-size: 28px;
-    }
-
-    .head-left {
-        grid-template-columns: repeat(2, auto);
-    }
-}
-
-@media (max-width: 480px) {
-    .header {
-        grid-template-columns: 1fr;
-        text-align: center;
-    }
-
-    .menu {
-        grid-template-columns: 1fr;
-        gap: 10px;
-    }
-
-    .menu a {
-        padding: 10px;
-    }
-
-    .brand {
-        font-size: 24px;
-    }
-
-    .head-left {
-        grid-template-columns: 1fr;
-    }
-
-    .sign-in {
-        width: 100%;
-        margin-right: 0;
-    }
-}
 
     </style>
 </head>
