--- a/HTML/cart.html
+++ b/HTML/cart.html
@@ -14,10 +14,17 @@
                 <a href="./home.html">Home</a>
                 <a href="./menu.html">Menu</a>
                 <a href="./location.html">Location</a>
-                <a href="./about.html">About</a>
+                <div class="about">
+                    <p class="about-chose">About</p>
+                    <div class="about-content">
+                        <a href="./our-story.html">Our Story</a>
+                        <a href="./mobile-app.html">Mobile App</a>
+                        <a href="./blog.html">Blog</a>
+                    </div>
+                </div>
             </div>
             <div class="head-left">
-                <a href="./cart.html"><img class="logo" src="../IMAGE/logo/Shopping-cart.png"></a>
+                <a class="chose" href="./cart.html"><img class="logo" src="../IMAGE/logo/Shopping-cart.png"></a>
                 <a href="./profile.html"><img class="logo" src="../IMAGE/logo/User-Profile.png"></a>
                 <button class="sign-in"><a class="button-link" href="./profile.html">Sign In</a></button>
             </div>
