--- a/HTML/location.html
+++ b/HTML/location.html
@@ -13,8 +13,15 @@
             <div class="menu">
                 <a href="./home.html">Home</a>
                 <a href="./menu.html">Menu</a>
-                <a href="./location.html">Location</a>
-                <a href="./about.html">About</a>
+                <a class="chose" href="./location.html">Location</a>
+                <div class="about">
+                    <p class="about-chose">About</p>
+                    <div class="about-content">
+                        <a href="./our-story.html">Our Story</a>
+                        <a href="./mobile-app.html">Mobile App</a>
+                        <a href="./blog.html">Blog</a>
+                    </div>
+                </div>
             </div>
             <div class="head-left">
                 <a href="./cart.html"><img class="logo" src="../IMAGE/logo/Shopping-cart.png"></a>
