--- a/HTML/our-story.html
+++ b/HTML/our-story.html
@@ -14,7 +14,14 @@
                 <a href="./home.html">Home</a>
                 <a href="./menu.html">Menu</a>
                 <a href="./location.html">Location</a>
-                <a href="./about.html">About</a>
+                <div class="about">
+                    <p class="chose" class="about-chose">Our Story</p>
+                    <div class="about-content">
+                        <a href="./our-story.html">Our Story</a>
+                        <a href="./mobile-app.html">Mobile App</a>
+                        <a href="./blog.html">Blog</a>
+                    </div>
+                </div>
             </div>
             <div class="head-left">
                 <a href="./cart.html"><img class="logo" src="../IMAGE/logo/Shopping-cart.png"></a>
