--- a/HTML/mobile-app.html
+++ b/HTML/mobile-app.html
@@ -15,7 +15,7 @@
                 <a href="./menu.html">Menu</a>
                 <a href="./location.html">Location</a>
                 <div class="about">
-                    <p class="chose" class="about-chose">Mobile App</p>
+                    <p class="chose about-chose">Mobile App</p>
                     <div class="about-content">
                         <a href="./our-story.html">Our Story</a>
                         <a href="./mobile-app.html">Mobile App</a>
