--- a/HTML/mobile-app.html
+++ b/HTML/mobile-app.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Coffree</title>
-    <link rel="stylesheet" href="../CSS/home.css">
+    <link rel="stylesheet" href="../CSS/mobile-app.css">
 </head>
 <body>
     <div class="container">
@@ -30,15 +30,13 @@
             </div>
         </div>
         <div class="main">
-            <h1>Start your day with<br>The Coffree</h1>
-            <p>We use coffee beans from South America</p>
-            <P>Roasted with love</P>
-            <P>Welcome to our coffee shop website, we sells many various types of coffee and tea,
-                <br>and our brand name of the shop is. We are passionate about coffee and the art
-                <br> of perfect brewing. So, we make sure that our customers get to taste the best
-                <br> handpicked coffee beans from South America make it into unique coffee drinks.
-            </P>
-            <button>Try Out</button>
+            <h1>THE COFFREE MOBILE APP</h1>
+            <div class="image">
+                <img src="../IMAGE/app-home.png">
+                <img src="../IMAGE/app-cart.png">
+                <img src="../IMAGE/app-location.png">
+            </div>
+            <p>“A convenient way to pay, order ahead, earn rewards, and skip the line.”</p>
         </div>
         <div class="bottom">
             <div class="follow">Follow
