--- a/HTML/cart.html
+++ b/HTML/cart.html
@@ -30,7 +30,32 @@
             </div>
         </div>
         <div class="main">
-            
+            <div class="left-main">
+                <div class="head-cart">
+                    <h1>Cart</h1>
+                    <button class="button-link"><a href="./menu.html">New Order</a></button>
+                    <button class="button-link">Previuos Order</button>
+                </div>
+                <div class="carts">
+                    <div class="cart">
+                        <img class="image-cart" src="../IMAGE/product/image-3.png">
+                        <p>Espresso</p>
+                        <div>Quantity</div>
+                        <div>Sugar</div>
+                        <div>Size</div>
+                        <p>$2.50</p>
+                        <button class="button-link cancel">Cancel</button>
+                    </div>
+                </div>
+            </div>
+            <div class="right-main">
+                <h1>Order Summary</h1>
+                <p>Item: 4</p>
+                <imput>Enter your code here</imput>
+                <button class="button-link">Apply</button>
+                <p>Total Cost: $12.00</p>
+                <button class="button-link">Play Now</button>
+            </div>  
         </div>
         <div class="bottom">
             <div class="follow">Follow
