--- a/HTML/home.html
+++ b/HTML/home.html
@@ -29,14 +29,21 @@
             </div>
         </div>
         <div class="main">
-            <h1>Start your day with<br>The Coffree</h1>
-            <p>We use coffee beans from South America</p>
-            <P>Roasted with love</P>
-            <P>Welcome to our coffee shop website, we sells many various types of coffee and tea,
-                <br>and our brand name of the shop is. We are passionate about coffee and the art
-                <br> of perfect brewing. So, we make sure that our customers get to taste the best
-                <br> handpicked coffee beans from South America make it into unique coffee drinks.
-            </P>
+            <h1>Start your day with
+            <br>The Coffree</h1>
+            <div class="head-main">
+                <p>We use coffee beans from South America</p>
+                <img class="logo" src="../IMAGE/logo/Ellipse.png">
+                <p>Roasted with love</p>
+            </div>
+            <p>Welcome to our coffee shop website, we sells
+            <br>many various types of coffee and tea,and our
+            <br>brand name of the shop is. We are passionate
+            <br>about coffee and the art of perfect brewing.
+            <br>So, we make sure that our customers get to
+            <br>taste the besthandpicked coffee beans from
+            <br>South America make it into unique coffee drinks.
+            </p>
             <button>Try Out</button>
         </div>
         <div class="bottom">
