--- a/HTML/menu.html
+++ b/HTML/menu.html
@@ -19,7 +19,6 @@
                     <div class="about-content">
                         <a href="./our-story.html">Our Story</a>
                         <a href="./mobile-app.html">Mobile App</a>
-                        <a href="./blog.html">Blog</a>
                     </div>
                 </div>
             </div>
@@ -30,67 +29,16 @@
             </div>
         </div>
         <div class="head">
-            <img class="promotion" src="../IMAGE/promotion.png">
-            <div class="text-overlay">Discount 40% off on Espresso
-                <br>
-                Try it out
+            <div><img class="promotion" src="../IMAGE/promotion.png"></div>
+            <div class="text-overlay">
+                Discount 40% off
+                <br>on Espresso
+                <br><br><br>
+                <br>Try it out
             </div>
         </div>
         <div class="main">
-            <div class="cart">
-                <div class="contain-product"><img class="product" src="../IMAGE/product/image-1.png"></div>
-                <p>Ice Americano</p>
-                <p id="price">$2.50</p>
-                <button class="order">Order Now</button>
-            </div>
-            <div class="cart">
-                <div class="contain-product"><img class="product" src="../IMAGE/product/image-2.png"></div>
-                <p>Frappucino</p>
-                <p id="price">$2.50</p>
-                <button class="order">Order Now</button>
-            </div>
-            <div class="cart">
-                <div class="contain-product"><img class="product" src="../IMAGE/product/image-3.png"></div>
-                <p>Espresso</p>
-                <p id="price">$2.50</p>
-                <button class="order">Order Now</button>
-            </div>
-            <div class="cart">
-                <div class="contain-product"><img class="product" src="../IMAGE/product/image-4.png"></div>
-                <p>Cappucino</p>
-                <p id="price">$2.50</p>
-                <button class="order">Order Now</button>
-            </div>
-            <div class="cart">
-                <div class="contain-product"><img class="product" src="../IMAGE/product/image-5.png"></div>
-                <p>Iced pumpkin latte</p>
-                <p id="price">$2.50</p>
-                <button class="order">Order Now</button>
-            </div>
-            <div class="cart">
-                <div class="contain-product"><img class="product" src="../IMAGE/product/image-6.png"></div>
-                <p>Iced Mocha</p>
-                <p id="price">$2.50</p>
-                <button class="order">Order Now</button>
-            </div>
-            <div class="cart">
-                <div class="contain-product"><img class="product" src="../IMAGE/product/image-7.png"></div>
-                <p>Machhiato</p>
-                <p id="price">$2.50</p>
-                <button class="order">Order Now</button>
-            </div>
-            <div class="cart">
-                <div class="contain-product"><img class="product" src="../IMAGE/product/image-8.png"></div>
-                <p>Iced Tea</p>
-                <p id="price">$2.50</p>
-                <button class="order">Order Now</button>
-            </div>
-            <div class="cart">
-                <div class="contain-product"><img class="product" src="../IMAGE/product/image-9.png"></div>
-                <p>Iced matcha latte</p>
-                <p id="price">$2.50</p>
-                <button class="order">Order Now</button>
-            </div>
+            
         </div>
         
         <div class="bottom">
