--- a/index.html
+++ b/index.html
@@ -3,164 +3,82 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dropdown Example</title>
+    <title>Customization Options</title>
     <style>
-        @font-face {
-    font-family: 'CustomFont';
-    src: url('../FONT/Italianno-Regular.ttf');
-}
+        /* Styling for the option group */
+        .option-group {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+        }
 
-h1 {
-    font-family: 'CustomFont', sans-serif;
-    font-size: 36px;
-    font-weight: 700;
-    color: #fff;
-}
+        .option {
+            margin-bottom: 10px;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
 
-body {
-    margin: 0;
-    background-color: black;
-}
+        label {
+            font-size: 16px;
+            margin-right: 10px;
+        }
 
-.container {
-    width: 100vw;
-    height: 100vh;
-    background-image: url(../IMAGE/home.png);
-    background-position: center;
-    background-size: cover;
-    color: white;
-    display: grid;
-    grid-template-rows: auto 1fr auto;
-}
+        .input-group {
+            display: flex;
+            align-items: center;
+        }
 
-/* Header Layout */
-.header {
-    display: grid;
-    grid-template-columns: 1fr 3fr 1fr;
-    border-bottom: 1px solid #fff;
-    padding: 10px 20px;
-    align-items: center;
-}
+        .btn {
+            background-color: #A0522D; /* Brown color */
+            color: white;
+            border: none;
+            padding: 5px 10px;
+            font-size: 16px;
+            cursor: pointer;
+            border-radius: 4px;
+        }
 
-.brand {
-    padding-left: 20px;
-    font-size: 32px;
-    font-weight: bold;
-}
+        .btn:hover {
+            background-color: #8B4513; /* Darker brown for hover */
+        }
 
-.menu {
-    margin: auto;
-    display: grid;
-    grid-template-columns: repeat(4, auto);
-    gap: 20px;
-}
-
-.menu a {
-    text-decoration: none;
-    color: #FFFFFF;
-    padding: 10px 20px;
-    border-radius: 5px;
-    font-weight: 500;
-    transition: background-color 0.3s ease;
-}
-
-.menu a:hover {
-    background-color: #AE6439;
-}
-
-.chose {
-    border-bottom: 2px solid #FFFFFF;
-}
-
-.about-chose {
-    padding: 10px;
-    cursor: pointer;
-    background: none;
-    margin: auto;
-    font-weight: bold;
-    color: #fff;
-}
-
-.about-content {
-    display: none;
-    position: absolute;
-    background-color: #AE6439;
-    text-align: center;
-    width: 150px;
-    border-radius: 5px;
-    margin-top: 5px;
-}
-
-.about-content a {
-    padding: 10px;
-    color: #FFFFFF;
-    background-color: aqua;
-    text-decoration: none;
-    display: block;
-    font-weight: 500;
-}
-
-.about:hover .about-content {
-    display: block;
-}
-
-.head-left {
-    margin: auto;
-    display: grid;
-    grid-template-columns: repeat(3, auto);
-    gap: 15px;
-}
-
-.head-left a {
-    max-width: 25px;
-    padding: 10px;
-}
-
-.sign-in {
-    margin: auto;
-    padding: 10px 20px;
-    border-radius: 16px;
-    cursor: pointer;
-    background-color: #000000;
-    border: 2px solid #FFFFFF;
-    transition: background-color 0.3s ease, color 0.3s ease;
-}
-
-.sign-in:hover {
-    background-color: #FFFFFF;
-    color: #000;
-}
-
-.button-link {
-    color: #FFFFFF;
-    text-decoration: none;
-}
-
-
-
+        .value {
+            margin: 0 10px;
+            font-size: 16px;
+            color: #333;
+            min-width: 30px;
+            text-align: center;
+        }
     </style>
 </head>
 <body>
-    <div class="header">
-        <h1 class="brand">The Coffree</h1>
-        <div class="menu">
-            <a class="chose" href="./home.html">Home</a>
-            <a href="./menu.html">Menu</a>
-            <a href="./location.html">Location</a>
-            <div class="about">
-                <p class="about-chose">About</p>
-                <div class="about-content">
-                    <a href="./our-story.html">Our Story</a>
-                    <a href="./mobile-app.html">Mobile App</a>
-                    <a href="./blog.html">Blog</a>
-                </div>
+
+    <div class="option-group">
+        <div class="option">
+            <label>Quantity:</label>
+            <div class="input-group">
+                <button class="btn">-</button>
+                <span class="value">1</span>
+                <button class="btn">+</button>
             </div>
         </div>
-        <div class="head-left">
-            <a href="./cart.html"><img class="logo" src="../IMAGE/logo/Shopping-cart.png" alt="Cart"></a>
-            <a href="./profile.html"><img class="logo" src="../IMAGE/logo/User-Profile.png" alt="User Profile"></a>
-            <button class="sign-in"><a class="button-link" href="./profile.html">Sign In</a></button>
+        <div class="option">
+            <label>Sugar:</label>
+            <div class="input-group">
+                <button class="btn">-</button>
+                <span class="value">50%</span>
+                <button class="btn">+</button>
+            </div>
+        </div>
+        <div class="option">
+            <label>Size:</label>
+            <div class="input-group">
+                <button class="btn">-</button>
+                <span class="value">L</span>
+                <button class="btn">+</button>
+            </div>
         </div>
     </div>
+
 </body>
 </html>
