--- a/HTML/profile.html
+++ b/HTML/profile.html
@@ -1,54 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Coffree</title>
-    <link rel="stylesheet" href="../CSS/profile.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Login Page</title>
+  <link rel="stylesheet" href="../CSS/profile.css">
 </head>
 <body>
-    <div class="container">
-        <div class="header">
-            <h1 class="brand">The Coffree</h1>
-            <div class="menu">
-                <a href="./home.html">Home</a>
-                <a href="./menu.html">Menu</a>
-                <a href="./location.html">Location</a>
-                <div class="about">
-                    <p class="about-chose">About</p>
-                    <div class="about-content">
-                        <a href="./our-story.html">Our Story</a>
-                        <a href="./mobile-app.html">Mobile App</a>
-                    </div>
-                </div>
-            </div>
-            <div class="head-left">
-                <a href="./cart.html"><img class="logo" src="../IMAGE/logo/Shopping-cart.png"></a>
-                <a class="chose" href="./profile.html"><img class="logo" src="../IMAGE/logo/User-Profile.png"></a>
-                <button class="sign-in"><a class="button-link" href="./profile.html">Sign In</a></button>
-            </div>
-        </div>
-        <div class="main">
-            Login
-        </div>
-        <div class="bottom">
-            <div class="follow">Follow
-                <div>
-                    <svg class="logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M14 19H19V5H5V19H12V14H10V12H12V10.3458C12 9.00855 12.1392 8.52362 12.4007 8.03473C12.6622 7.54584 13.0458 7.16216 13.5347 6.9007C13.9174 6.69604 14.3922 6.57252 15.2217 6.51954C15.551 6.49851 15.9771 6.52533 16.5 6.6V8.5H16C15.0827 8.5 14.7042 8.54332 14.4779 8.66433C14.3376 8.73939 14.2394 8.83758 14.1643 8.97793C14.0433 9.20418 14 9.42853 14 10.3458V12H16.5L16 14H14V19ZM4 3H20C20.5523 3 21 3.44772 21 4V20C21 20.5523 20.5523 21 20 21H4C3.44772 21 3 20.5523 3 20V4C3 3.44772 3.44772 3 4 3Z"></path></svg>
-                    <div>Facebook</div>
-                </div>
-                <div>
-                    <svg class="logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M10.4883 14.651L15.25 21H22.25L14.3917 10.5223L20.9308 3H18.2808L13.1643 8.88578L8.75 3H1.75L9.26086 13.0145L2.31915 21H4.96917L10.4883 14.651ZM16.25 19L5.75 5H7.75L18.25 19H16.25Z"></path></svg>
-                    <div>X</div>
-                </div>
-                
-                
-            </div>
-            <div class="contact">Contact Us
-                <p>(+855) 12 222222</p>
-                <p>(+855) 16 816816</p>
-            </div>
-        </div> 
+  <div class="login-container">
+    <h1>Log in</h1>
+    <form>
+      <div class="input-group">
+        <label for="username">
+          <i class="fas fa-user"></i>
+          Username
+        </label>
+        <input type="text" id="username" placeholder="Enter your username" required>
+      </div>
+      <div class="input-group">
+        <label for="password">
+          <i class="fas fa-lock"></i>
+          Password
+        </label>
+        <input type="password" id="password" placeholder="Enter your password" required>
+      </div>
+      <a href="#" class="forgot-password">Forgot password?</a>
+      <button type="submit" class="login-btn"><a href="./home.html"></a><b>Log in</b></a></button>
+    </form>
+    <p class="or">Or sign up using</p>
+    <div class="social-icons">
+      <button class="social-btn">
+        <img src="../IMAGE/logo/facebooklogo.png" alt="Facebook Logo" class="social-icon">
+      </button>
+      <button class="social-btn">
+        <img src="../IMAGE/logo/insta.png" alt="Insta Logo" class="social-icon">
+      </button>
+      <button class="social-btn">
+        <img src="../IMAGE/logo/xlogo.png" alt="X Logo" class="social-icon">
+      </button>
     </div>
+    <p class="signup">Or sign up using <a href="#">Sign up</a></p>
+  </div>
 </body>
 </html>
