--- a/HTML/cart.html
+++ b/HTML/cart.html
@@ -32,8 +32,8 @@
             <div class="left-main">
                 <div class="head-cart">
                     <h1>Cart</h1>
-                    <button class="button-link"><a href="./menu.html">New Order</a></button>
-                    <button class="button-link">Previuos Order</button>
+                    <button class="button"><a class="button-link" href="./menu.html">New Order</a></button>
+                    <button class="button-link button">Previuos Order</button>
                 </div>
                 <div class="carts">
                     <div class="cart">
@@ -51,9 +51,9 @@
                 <h1>Order Summary</h1>
                 <p>Item: 4</p>
                 <imput>Enter your code here</imput>
-                <button class="button-link">Apply</button>
-                <p>Total Cost: $12.00</p>
-                <button class="button-link">Play Now</button>
+                <button class="button-link button">Apply</button>
+                <p>Total Cost: $9.00</p>
+                <button class="button-link button">Pay Now</button>
             </div>  
         </div>
         <div class="bottom">
