--- a/HTML/home.html
+++ b/HTML/home.html
@@ -45,6 +45,7 @@
             <br>South America make it into unique coffee drinks.
             </p>
             <button>Try Out</button>
+            <div></div>
         </div>
         <div class="bottom">
             <div class="follow">Follow
