--- a/HTML/cart.html
+++ b/HTML/cart.html
@@ -39,9 +39,30 @@
                     <div class="cart">
                         <img class="image-cart" src="../IMAGE/product/image-3.png">
                         <p>Espresso</p>
-                        <div>Quantity</div>
-                        <div>Sugar</div>
-                        <div>Size</div>
+                        <div class="option">
+                            <label>Quantity:</label>
+                            <div class="input-group">
+                                <button class="btn">-</button>
+                                <span class="value">1</span>
+                                <button class="btn">+</button>
+                            </div>
+                        </div>
+                        <div class="option">
+                            <label>Sugar:</label>
+                            <div class="input-group">
+                                <button class="btn">-</button>
+                                <span class="value">50%</span>
+                                <button class="btn">+</button>
+                            </div>
+                        </div>
+                        <div class="option">
+                            <label>Size:</label>
+                            <div class="input-group">
+                                <button class="btn">-</button>
+                                <span class="value">L</span>
+                                <button class="btn">+</button>
+                            </div>
+                        </div>
                         <p>$2.50</p>
                         <button class="button-link cancel">Cancel</button>
                     </div>
