--- a/HTML/home.html
+++ b/HTML/home.html
@@ -44,7 +44,7 @@
             <br>taste the besthandpicked coffee beans from
             <br>South America make it into unique coffee drinks.
             </p>
-            <button>Try Out</button>
+            <button><b>Try Out</b></button>
             <div></div>
         </div>
         <div class="bottom">
