--- a/HTML/our-story.html
+++ b/HTML/our-story.html
@@ -38,28 +38,28 @@
                     <br>
                 </div>
                 <div>
-                    <h1>Celebrating 49 years</h1>
+                    <h1 class="font-Italianno">Celebrating 49 years</h1>
                     <P>Coffree was founded in 1975 by Bro Vat and Bro Wond, two visionary entrepreneurs who shared a passion for crafting the perfect coffee experience. While their shared dream brought them together in business, what many didn't know was that behind the grind and steam of their café, Bro Wond secretly harbored a deep and unspoken love for Bro Vat. Each cup of coffee they brewed seemed to carry whispers of emotions untold, the aroma mingling with the silent bond they shared—a love as warm and complex as their signature roast.</P>
-                    <h1>Since 1975</h1>
+                    <h1 class="font-Jacques-Francois">Since 1975</h1>
                 </div>
                 <div>
-                    <h1>Find your tastse</h1>
+                    <h1 class="font-Italianno">Find your tastse</h1>
                     <img class="image" src="../IMAGE/product/image-4.png">
                 </div>
             </div>
             <div class="below-main">
                 <div>
-                    <h1>Original Taste </h1>
+                    <h1 class="font-Italianno">Original Taste </h1>
                     <img class="image" src="../IMAGE/product/image-2.png">
                     <p>“Coffree's Original Cold Brew™ Iced Coffee is crafted daily using a unique cold-drip process that preserves the rich flavor and bold strength of the beans while delivering a coffee that's two-thirds”</p>
                 </div>
                 <div>
                     <img class="image" src="../IMAGE/product/image-10.png">
-                    <h1>Fresh Daily</h1>
+                    <h1 class="font-Italianno">Fresh Daily</h1>
                     <h1>Coffree</h1>
                 </div>
                 <div>
-                    <h1>Customer Favorite</h1>
+                    <h1 class="font-Italianno">Customer Favorite</h1>
                     <img class="image" src="../IMAGE/product/image-5.png">
                     <p>Coffree's Iced pumpkin latte is a crowd favorite, combining our rich, smooth cold brew with the subtle sweetness of natural vanilla and a splash of creamy milk. It's the ideal balance of bold coffee flavor and indulgent smoothness, crafted to brighten your day with every sip.</p>
                 </div>
