--- a/HTML/cart.html
+++ b/HTML/cart.html
@@ -39,15 +39,15 @@
                     <div class="cart">
                         <img class="image-cart" src="../IMAGE/product/image-3.png">
                         <p>Espresso</p>
-                        <div class="option">
+                        <div class="option1">
                             <label>Quantity:</label>
                             <div class="input-group">
                                 <button class="btn">-</button>
                                 <span class="value">1</span>
-                                <button class="btn">+</button>
+                                <button class="btn2">+</button>
                             </div>
                         </div>
-                        <div class="option">
+                        <div class="option1">
                             <label>Sugar:</label>
                             <div class="input-group">
                                 <button class="btn">-</button>
@@ -55,12 +55,12 @@
                                 <button class="btn">+</button>
                             </div>
                         </div>
-                        <div class="option">
+                        <div class="option1">
                             <label>Size:</label>
                             <div class="input-group">
                                 <button class="btn">-</button>
                                 <span class="value">L</span>
-                                <button class="btn">+</button>
+                                <button class="btn2">+</button>
                             </div>
                         </div>
                         <p>$2.50</p>
