--- a/HTML/our-story.html
+++ b/HTML/our-story.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1 class="brand">The Coffree</h1>
+            <h1 class="brand" class="font-Italianno">The Coffree</h1>
             <div class="menu">
                 <a href="./home.html">Home</a>
                 <a href="./menu.html">Menu</a>
