--- a/HTML/cart.html
+++ b/HTML/cart.html
@@ -44,7 +44,7 @@
                             <div class="input-group">
                                 <button class="btn">-</button>
                                 <span class="value">1</span>
-                                <button class="btn2">+</button>
+                                <button class="btn">+</button>
                             </div>
                         </div>
                         <div class="option1">
@@ -60,7 +60,7 @@
                             <div class="input-group">
                                 <button class="btn">-</button>
                                 <span class="value">L</span>
-                                <button class="btn2">+</button>
+                                <button class="btn">+</button>
                             </div>
                         </div>
                         <p>$2.50</p>
